--- a/.github/workflows/cicd-dev.yml
+++ b/.github/workflows/cicd-dev.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
     - feat/family
-    - feature/*
-    - bugfix/*
+   
 
 env:
   ENV: "dev"
@@ -70,7 +69,7 @@ jobs:
         pip install flake8
     - name: Lint app-code
       run: |
-        
+        python --version
 #        flake8 --extend-ignore E203,W234,E302,E305,E722
 
   deploy-to-dev:
