--- a/.github/workflows/cicd-dev.yml
+++ b/.github/workflows/cicd-dev.yml
@@ -24,7 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lint]
     steps:
-    - uses: actions/checkout@v2
+    - name: checkout
+      uses: actions/checkout@v3.3.0
 
     - name: Set up Python Environment
       uses: action/setup-python@v2
