--- a/.github/workflows/cicd-dev.yml
+++ b/.github/workflows/cicd-dev.yml
@@ -1,4 +1,4 @@
-name: CI/CD for Dev Environment
+name: CI/CD-dev for Dev Environment
 
 on:
   push:
@@ -27,10 +27,10 @@ jobs:
     - name: checkout
       uses: actions/checkout@v3.3.0
 
-    - name: Set up Python Environment
-      uses: action/setup-python@v4.5.0
-      with:
-        python-version: '3.9'
+    - name: Setup Python
+      uses: actions/setup-python@v4.5.0
+
+      
 
     - name: Install dependencies 
       run: |
