--- a/.github/workflows/cicd-dev.yml
+++ b/.github/workflows/cicd-dev.yml
@@ -93,22 +93,22 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Build and deploy app on Dev-Instance
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.DEV_SERVER }}
-        username: ${{ secrets.DEV_USERNAME }}
+#    - name: Build and deploy app on Dev-Instance
+#      uses: appleboy/ssh-action@master
+#      with:
+#        host: ${{ secrets.DEV_SERVER }}
+#        username: ${{ secrets.DEV_USERNAME }}
 #        password: ${{ secrets.DEV_PASSWORD }}
-        key: ${{ secrets.DEV_KEY }}
-        script: |
-          sudo systemctl stop image-app.service
-          sudo rm -Rf ~/app-src
-          git clone ${{ env.REPOSITORY_URL }} ~/app-src && cd ~/app-src
-          git pull && git checkout dev
-          python -m pip install --upgrade pip && pip install -r requirements.txt
-          sudo chown root app.py
-          sudo systemctl enable image-app.service
-          sudo systemctl restart image-app.service
-          sudo systemctl status image-app.service | grep -i "active"
-          pwd && ls -la
+#        key: ${{ secrets.DEV_KEY }}
+#        script: |
+#          sudo systemctl stop image-app.service
+#          sudo rm -Rf ~/app-src
+#          git clone ${{ env.REPOSITORY_URL }} ~/app-src && cd ~/app-src
+#          git pull && git checkout dev
+#          python -m pip install --upgrade pip && pip install -r requirements.txt
+#          sudo chown root app.py
+#          sudo systemctl enable image-app.service
+#          sudo systemctl restart image-app.service
+#          sudo systemctl status image-app.service | grep -i "active"
+#          pwd && ls -la
 
