--- a/.github/workflows/cicd-dev.yml
+++ b/.github/workflows/cicd-dev.yml
@@ -73,25 +73,25 @@ jobs:
         python --version
 #        flake8 --extend-ignore E203,W234,E302,E305,E722
 
-  deploy-to-dev:
-    runs-on: ubuntu-latest
-    needs: [build, lint]
-    environment:
-      name: dev
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3.3.0
+#  deploy-to-dev:
+#    runs-on: ubuntu-latest
+#    needs: [build, lint]
+#    environment:
+#      name: dev
+#    steps:
+#    - name: Checkout code
+#      uses: actions/checkout@v3.3.0
 
-    - name: Set up Python Environment
-      uses: actions/setup-python@v4.5.0
-      with:
-        python-version: '3.10'
+#    - name: Set up Python Environment
+#      uses: actions/setup-python@v4.5.0
+#      with:
+#        python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        pwd && ls -la
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+#    - name: Install dependencies
+#      run: |
+#        pwd && ls -la
+#        python -m pip install --upgrade pip
+#        pip install -r requirements.txt
         
 #    - name: Build and deploy app on Dev-Instance
 #      uses: appleboy/ssh-action@master
