--- a/.github/workflows/cicd-dev.yml
+++ b/.github/workflows/cicd-dev.yml
@@ -20,39 +20,39 @@ env:
 
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    needs: [lint]
-    steps:
-    - name: checkout
-      uses: actions/checkout@v3.3.0
+#  build:
+#    runs-on: ubuntu-latest
+#    needs: [lint]
+#    steps:
+#    - name: checkout
+#      uses: actions/checkout@v3.3.0
 
-    - name: Setup Python
-      uses: actions/setup-python@v4.5.0
+#    - name: Setup Python
+#      uses: actions/setup-python@v4.5.0
 
       
 
-    - name: Install dependencies 
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+#    - name: Install dependencies 
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install -r requirements.txt
         
-    - name: Run Unit tests on the app
-      run: |
-        python -m py_compile app.py
+#    - name: Run Unit tests on the app
+#      run: |
+#        python -m py_compile app.py
     
-    - name: Determine image tags (If not yet present)
-      if: env.APP_IMAGE_TAG == ''
-      run: |
-        echo "APP_IMAGE_TAG=$(echo $GITHUB_SHA | head -c7" >> $GITHUB_ENV
-    - name: Build container image
-      run: docker built -t ${{ env.CONATAINER_REGISTRY }}/${{env.DOCKER_USERNAME }}/${{env.APP_IMAGE_NAME }}:$(echo $GITHUB_SHA | head -c7)-SNAPSHOT .
+#    - name: Determine image tags (If not yet present)
+#      if: env.APP_IMAGE_TAG == ''
+#      run: |
+#        echo "APP_IMAGE_TAG=$(echo $GITHUB_SHA | head -c7" >> $GITHUB_ENV
+#    - name: Build container image
+#      run: docker built -t ${{ env.CONATAINER_REGISTRY }}/${{env.DOCKER_USERNAME }}/${{env.APP_IMAGE_NAME }}:$(echo $GITHUB_SHA | head -c7)-SNAPSHOT .
 
-    - name: Docker Login
-      run: docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ env.DOCKER_PASSWORD }} ${{ env.CONTAINER_REGISTRY }}
+#    - name: Docker Login
+#      run: docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ env.DOCKER_PASSWORD }} ${{ env.CONTAINER_REGISTRY }}
 
-    - name: Push image to DockerHub
-      run: docker push ${{ env.CONTAINER_REGISTRY }}/${{ env.DOCKER_USERNAME }}/${{ env.APP_IMAGE_NAME }}:$(echo $GITHUB_SHA | head -c7)-SNAPSHOT
+#    - name: Push image to DockerHub
+#      run: docker push ${{ env.CONTAINER_REGISTRY }}/${{ env.DOCKER_USERNAME }}/${{ env.APP_IMAGE_NAME }}:$(echo $GITHUB_SHA | head -c7)-SNAPSHOT
 
   lint:
     runs-on: ubuntu-latest
