--- a/.github/workflows/cicd-dev.yml
+++ b/.github/workflows/cicd-dev.yml
@@ -20,22 +20,22 @@ env:
 
 
 jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    needs: [lint]
-#    steps:
-#    - name: checkout
-#      uses: actions/checkout@v3.3.0
+  build:
+    runs-on: ubuntu-latest
+    needs: [lint]
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3.3.0
 
-#    - name: Setup Python
-#      uses: actions/setup-python@v4.5.0
+    - name: Setup Python
+      uses: actions/setup-python@v4.5.0
 
       
 
-#    - name: Install dependencies 
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install -r requirements.txt
+    - name: Install dependencies 
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
         
 #    - name: Run Unit tests on the app
 #      run: |
